<resources>
    <string name="app_name">BookSwap</string>
    <string name="app_icon_description">Icon of the application</string>
    <string name="title_activity_register">Register activity</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="sing_in_button_label">Sign in</string>
    <string name="search_label">Search</string>
    //Add layout strings
    <string name="add_book_title">Title</string>
    <string name="add_book_author">Author</string>
    <string name="add_book_category">Category</string>
    <string name="add_book_main_category">Main</string>
    <string name="add_book_secondary_category">Secondary</string>
    <string name="add_book_custom_category">Custom</string>
    <string name="add_book_main_cat">Main Category</string>
    <string name="add_book_secondary_cat">Secondary Category</string>
    <string name="add_book_custom_cat">Custom Category</string>
    <string name="add_book_price">Price</string>
    <string name="add_book_condition">Condition</string>
    <string name="add_book_publisher">Publisher</string>
    <string name="add_book_edition">Edition</string>
    <string name="add_book_year">Year</string>
    <string name="add_book_addImage">Add Image</string>
    <string name="add_book_description">Description and additional information</string>
    <string name="add_book_add">Add</string>
    <string name="add_book_delete">Delete</string>
    <string name="book_image_description">Image of the book</string>
    // End of add layout strings
    <string name="registration_username">Your name:</string>
    <string name="registration_username_hint">John Doe</string>
    <string name="registration_mail">Your mail:</string>
    <string name="registration_mail_hint">john.doe@gmail.com</string>
    <string name="registration_password">Password:</string>
    <string name="registration_password_hint">********</string>
    <string name="registration_confirm_password">Confirm password:</string>
    <string name="title_activity_chat">Chat activity</string>
    <string name="top_panel">Top Panel</string>
    <string name="your_book">Your books:</string>
    <string name="type_message_hint">Type a message…</string>
    <string name="send_label">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sing_out_label">Sign out</string>
    <string name="my_books_label">My Books</string>
    <string name="my_favourite_books_label">My favourite books</string>
    <string name="my_profile_settings">My Profile</string>
    <string name="communicate_label">Others</string>
    <string name="description_hint">Book description</string>
    <string name="images_for_book">Images:</string>
    <string name="book_favourite_button_description">Favourites button</string>
    <string name="interested_button_description">Interested button</string>
    <string name="message_owner_description">Message button</string>
    <string name="empty_value_label">Empty</string>
    <string name="username_profile_info">Username</string>
    <string name="username_email_label">Email</string>
    <string name="user_university_label">Study</string>
    <string name="user_study_field_label">Study field</string>
    <string name="user_residence_label">Residence</string>
    <string name="user_phone_label">Phone</string>
    <string name="city_hint">City</string>
    <string name="owner_description">Owner:</string>
    <string name="add_date_description">Add date:</string>
    <string name="change_data_info">Change info</string>
    <string name="change_profile_photo_button">Load image...</string>
    <string name="border">Border</string>
    <string name="title_activity_profile">Your profile</string>
    <string name="title_activity_mybooks">Your books</string>
    <string name="title_activity_addbook">Add book activity</string>
    <string name="title_activity_searchuser">Search user activity</string>
    <string name="title_activity_favorites">Your favorite books</string>
    <string name="title_activity_searchbook">Search book activity</string>
    <string name="title_activity_chosenbook">Chosen book</string>
    <string name="enter_value">Enter value...</string>
    <string name="title_activity_conversation">Conversation activity</string>
    <string name="title_activity_browse">Browse books activity</string>

    //Condition of the book
    <string-array name="conditions">
        <item name="condition_as_new">As New</item>
        <item name="condition_Very_Good">Very Good</item>
        <item name="condition_good">Good</item>
        <item name="condition_fair">Fair</item>
        <item name="condition_poor">Poor</item>
    </string-array>


</resources>
