<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_my_books"
              android:icon="@drawable/ic_my_books"
              android:title="@string/my_books_label"/>
        <item android:id="@+id/nav_favourite_books"
              android:icon="@drawable/ic_favorite"
              android:title="@string/my_favourite_books_label"/>
        <item android:id="@+id/nav_profile"
              android:icon="@drawable/ic_person"
              android:title="@string/my_profile_settings"/>
    </group>

    <item android:title="@string/communicate_label">
        <menu>
            <item android:id="@+id/nav_sign_out"
                  android:icon="@drawable/ic_log_out"
                  android:title="@string/sing_out_label"/>
            <item android:id="@+id/nav_send"
                  android:icon="@drawable/ic_mail_black_24dp"
                  android:title="Send"/>
        </menu>
    </item>
</menu>