<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChosenBookActivity"
    android:id="@+id/main_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/main_scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/book_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/book_image_description"
                android:scaleType="centerInside"
                android:text="TextView"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                tools:text="@string/add_book_title" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="160dp"
                android:layout_height="240dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/book_image_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars[8]" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/book_title_text"
                app:layout_constraintTop_toBottomOf="@+id/book_title_text"
                tools:text="@string/add_book_author" />

            <TextView
                android:id="@+id/category_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="TextView"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/year_text"
                app:layout_constraintTop_toBottomOf="@+id/title_text"
                tools:text="@string/add_book_category" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp"
                android:text="@string/add_book_description"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/description_of_book_text"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/description_text"
                app:layout_constraintTop_toBottomOf="@+id/description_text"
                tools:text="@string/description_hint" />

            <TextView
                android:id="@+id/images_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/images_for_book"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/description_of_book_text"
                app:layout_constraintTop_toBottomOf="@+id/description_of_book_text" />

            <ImageView
                android:id="@+id/photo2_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/book_image_description"
                app:layout_constraintEnd_toStartOf="@+id/photo3_image"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/images_text"
                tools:srcCompat="@tools:sample/avatars[8]" />

            <ImageView
                android:id="@+id/photo3_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/book_image_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/photo2_image"
                app:layout_constraintTop_toTopOf="@+id/photo2_image"
                tools:srcCompat="@tools:sample/avatars[8]" />

            <TextView
                android:id="@+id/year_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/title_text"
                app:layout_constraintTop_toBottomOf="@+id/title_text"
                tools:text="@string/add_book_year" />

            <TextView
                android:id="@+id/owner_text"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/year_text"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                tools:text="@string/registration_username_hint" />

            <TextView
                android:id="@+id/publisher_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:text="@string/add_book_publisher" />

            <TextView
                android:id="@+id/condition_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/publisher_text"
                app:layout_constraintTop_toBottomOf="@+id/publisher_text"
                tools:text="@string/add_book_condition" />

            <TextView
                android:id="@+id/add_year_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/condition_text"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/publisher_text"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@tools:sample/date/mmddyy" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/owner_descripton"
                app:layout_constraintStart_toStartOf="@+id/category_text"
                app:layout_constraintTop_toBottomOf="@+id/category_text" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_date_description"
                app:layout_constraintBottom_toTopOf="@+id/condition_text"
                app:layout_constraintStart_toEndOf="@+id/owner_text"
                app:layout_constraintTop_toTopOf="@+id/publisher_text" />

            <TextView
                android:id="@+id/edition_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/year_text"
                app:layout_constraintStart_toEndOf="@+id/year_text"
                app:layout_constraintTop_toTopOf="@+id/year_text"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/add_book_edition" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/price"
        layout="@layout/price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_scroll" />
</android.support.constraint.ConstraintLayout>