<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ChangeProfileDataActivity">
    <ScrollView
        android:id="@+id/main_scroll"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar1"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">





    <ImageView
            android:scaleType="centerInside"
            android:layout_width="113dp"
            android:layout_height="110dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/profile_activity_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"
            app:layout_constraintHorizontal_bias="0.234"/>
    <EditText
            android:hint="@string/enter_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_phone_number"
            app:layout_constraintEnd_toEndOf="@+id/user_residence_place"
            app:layout_constraintStart_toStartOf="@+id/user_residence_place"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/user_residence_place"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <EditText
            android:hint="@string/enter_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_residence_place"
            app:layout_constraintEnd_toEndOf="@+id/user_study_field"
            app:layout_constraintStart_toStartOf="@+id/user_study_field"
            app:layout_constraintTop_toBottomOf="@+id/user_study_field"
            android:layout_marginTop="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <EditText
            android:hint="@string/enter_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_study_field"
            app:layout_constraintEnd_toEndOf="@+id/user_university"
            app:layout_constraintStart_toStartOf="@+id/user_university"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/user_university"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
    />
    <EditText
            android:hint="@string/enter_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_university"
            app:layout_constraintEnd_toEndOf="@+id/user_email_field_profile_activity"
            app:layout_constraintStart_toStartOf="@+id/user_email_field_profile_activity"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/user_email_field_profile_activity"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/empty_value_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_email_field_profile_activity"
            app:layout_constraintEnd_toEndOf="@+id/user_username"
            app:layout_constraintStart_toStartOf="@+id/user_username"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/user_username"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/empty_value_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_username"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_activity_image"
            app:layout_constraintStart_toStartOf="@+id/profile_activity_image"
            app:layout_constraintEnd_toEndOf="@+id/profile_activity_image"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/username_profile_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_username_label"
            app:layout_constraintBottom_toTopOf="@+id/user_username"
            app:layout_constraintStart_toStartOf="@+id/user_username"/>
    <TextView
            android:text="@string/username_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_email_label"
            app:layout_constraintBottom_toTopOf="@+id/user_email_field_profile_activity"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/user_university_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_university_label"
            app:layout_constraintBottom_toTopOf="@+id/user_university" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/user_study_field_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_study_field_label"
            app:layout_constraintBottom_toTopOf="@+id/user_study_field"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/user_residence_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_residence_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/user_residence_place"/>
    <TextView
            android:text="@string/user_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_phone_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/user_phone_number"/>

    <Button
        android:id="@+id/edit_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_rectangle"
        android:onClick="changePersonalData"
        android:text="@string/change_data_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/uploadImageButton"
        app:layout_constraintStart_toStartOf="@+id/uploadImageButton"
        app:layout_constraintTop_toBottomOf="@+id/user_phone_number"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/uploadImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_rectangle"
        android:onClick="uploadImage"
        android:text="@string/change_profile_photo_button"
        app:layout_constraintBottom_toBottomOf="@+id/profile_activity_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/profile_activity_image"
        app:layout_constraintTop_toTopOf="@+id/profile_activity_image" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>